[package]
name = "catengine"
version = "1.0.0"
authors = ["Catgg54 sleepy-furret@proton.me"]
description = "A simple 2D and 3D engine for rendering ghraphics."
edition = "2024"
license = "MIT"

[dependencies]
sdl2 = { version = "0.36", features = ["bundled"] }
image = "0.24"
gl = "0.14"
glam = "0.25"
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }

[env]
PYO3_USE_ABI3_FORWARD_COMPATIBILITY = 1

[features]
python = ["pyo3"]
